--- a/internal/projects/bulleit/Interfaces/PeopleViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PeopleViewController.xib
@@ -53,7 +53,7 @@
 							<object class="IBUIImageView" id="301396522">
 								<reference key="NSNextResponder" ref="563354220"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, -234}, {320, 245}}</string>
+								<string key="NSFrame">{{0, -356}, {320, 365}}</string>
 								<reference key="NSSuperview" ref="563354220"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="134228117"/>
@@ -875,10 +875,10 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>aboutUsButtonPressed:</string>
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
 							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -894,14 +894,18 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>aboutUsButtonPressed:</string>
 							<string>doneButtonPressed:</string>
 							<string>editProfileButtonPressed:</string>
 							<string>logoutButtonPressed:</string>
-							<string>notificationsButtonPressed:</string>
 							<string>sharingButtonPressed:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">aboutUsButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 							<object class="IBActionInfo">
 								<string key="name">doneButtonPressed:</string>
 								<string key="candidateClassName">id</string>
@@ -912,10 +916,6 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">logoutButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">notificationsButtonPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -968,7 +968,7 @@
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{16, 16}</string>
-				<string>{320, 240}</string>
+				<string>{320, 365}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
