--- a/internal/projects/bulleit/Stamped/AboutUsViewController.xib
+++ b/internal/projects/bulleit/Stamped/AboutUsViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{5, 12}, {310, 336}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="475469435"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">4</int>
@@ -58,6 +59,7 @@
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{32, 350}, {256, 58}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1010583062"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -100,6 +102,7 @@
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{32, 408}, {256, 58}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="480294978"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -129,6 +132,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{80, 483}, {160, 15}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="429911492"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="357617943">
@@ -164,6 +168,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{45, 500}, {231, 43}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1062237822"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<reference key="IBUIBackgroundColor" ref="357617943"/>
@@ -195,6 +200,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{45, 558}, {231, 43}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="815621698"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<reference key="IBUIBackgroundColor" ref="357617943"/>
@@ -221,7 +227,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{141, 613}, {38, 38}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -236,6 +242,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{129, 297}, {63, 21}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="425358847"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -265,6 +272,7 @@ DUhlbHZldGljYQ</string>
 				</array>
 				<string key="NSFrameSize">{320, 696}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="608744020"/>
 				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -286,6 +294,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="348251740"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -295,11 +304,24 @@ DUhlbHZldGljYQ</string>
 							<string key="NSResourceName">gradient_background.png</string>
 						</object>
 					</object>
+					<object class="IBUIScrollView" id="194269740">
+						<reference key="NSNextResponder" ref="1065572797"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
+						<reference key="NSSuperview" ref="1065572797"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:174</string>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+					</object>
 					<object class="IBUIImageView" id="999300434">
 						<reference key="NSNextResponder" ref="1065572797"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, -196}, {320, 251}}</string>
+						<string key="NSFrame">{{0, -316}, {320, 365}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="93932925"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -315,6 +337,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 7}, {69, 30}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="144172638"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -353,6 +376,7 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{116, 14}, {88, 16}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="194269740"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -363,21 +387,10 @@ DUhlbHZldGljYQ</string>
 							<string key="NSResourceName">about_header</string>
 						</object>
 					</object>
-					<object class="IBUIScrollView" id="194269740">
-						<reference key="NSNextResponder" ref="1065572797"/>
-						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{0, 45}, {320, 415}}</string>
-						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSNextKeyView"/>
-						<string key="NSReuseIdentifierKey">_NS:174</string>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
-					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="999300434"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -588,7 +601,51 @@ DUhlbHZldGljYQ</string>
 			<nil key="sourceID"/>
 			<int key="maxID">41</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">AboutUsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="followButtonPressed:">id</string>
+						<string key="settingsButtonPressed:">id</string>
+						<string key="stampedButtonPressed:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="followButtonPressed:">
+							<string key="name">followButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="settingsButtonPressed:">
+							<string key="name">settingsButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="stampedButtonPressed:">
+							<string key="name">stampedButtonPressed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="contentView">UIView</string>
+						<string key="scrollView">UIScrollView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="contentView">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/AboutUsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -603,7 +660,7 @@ DUhlbHZldGljYQ</string>
 			<string key="settings_about_stampedbutton">{16, 16}</string>
 			<string key="settings_about_stampedbutton_pressed">{16, 16}</string>
 			<string key="settings_about_watermark">{16, 16}</string>
-			<string key="shelf_background.png">{320, 240}</string>
+			<string key="shelf_background.png">{320, 365}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
