--- a/internal/projects/bulleit/Stamped/SharingSettingsViewController.xib
+++ b/internal/projects/bulleit/Stamped/SharingSettingsViewController.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="739011000"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="320754125"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,9 +55,8 @@
 					<object class="IBUIImageView" id="466888643">
 						<reference key="NSNextResponder" ref="739011000"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, -196}, {320, 251}}</string>
+						<string key="NSFrame">{{0, -316}, {320, 365}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="145042037"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -74,7 +72,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 7}, {69, 30}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="317081720"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -120,7 +117,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{125, 14}, {70, 20}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="666428538"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -140,7 +136,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 16}, {310, 65}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="912301091"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<int key="IBUIContentMode">1</int>
@@ -156,7 +151,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 39}, {24, 18}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991665588"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -178,7 +172,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 37}, {138, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="201856794"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -212,7 +205,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 46}, {123, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="123477378"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -252,7 +244,6 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{210, 31}, {90, 33}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="702331027"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -296,7 +287,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 89}, {310, 65}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="617803650"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<int key="IBUIContentMode">1</int>
@@ -309,7 +299,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 112}, {18, 18}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="494192250"/>
 								<string key="NSReuseIdentifierKey">_NS:567</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -329,7 +318,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 110}, {138, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="819040179"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -354,7 +342,6 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{210, 104}, {90, 33}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -379,7 +366,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{53, 119}, {123, 21}}</string>
 								<reference key="NSSuperview" ref="666428538"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="202498133"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -408,7 +394,6 @@
 						</array>
 						<string key="NSFrame">{{0, 45}, {320, 415}}</string>
 						<reference key="NSSuperview" ref="739011000"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1047942362"/>
 						<string key="NSReuseIdentifierKey">_NS:174</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -419,7 +404,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="466888643"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -684,91 +668,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">52</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">SharingSettingsViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="fbButtonPressed:">id</string>
-						<string key="settingsButtonPressed:">id</string>
-						<string key="twitterButtonPressed:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="fbButtonPressed:">
-							<string key="name">fbButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="settingsButtonPressed:">
-							<string key="name">settingsButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="twitterButtonPressed:">
-							<string key="name">twitterButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="fbButtonLabel">UIImageView</string>
-						<string key="fbConnectButton">UIButton</string>
-						<string key="fbIconView">UIImageView</string>
-						<string key="fbLabel">UILabel</string>
-						<string key="fbNameLabel">UILabel</string>
-						<string key="twitterButtonLabel">UIImageView</string>
-						<string key="twitterConnectButton">UIButton</string>
-						<string key="twitterIconView">UIImageView</string>
-						<string key="twitterLabel">UILabel</string>
-						<string key="twitterNameLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="fbButtonLabel">
-							<string key="name">fbButtonLabel</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fbConnectButton">
-							<string key="name">fbConnectButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fbIconView">
-							<string key="name">fbIconView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fbLabel">
-							<string key="name">fbLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fbNameLabel">
-							<string key="name">fbNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="twitterButtonLabel">
-							<string key="name">twitterButtonLabel</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="twitterConnectButton">
-							<string key="name">twitterConnectButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="twitterIconView">
-							<string key="name">twitterIconView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="twitterLabel">
-							<string key="name">twitterLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="twitterNameLabel">
-							<string key="name">twitterNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SharingSettingsViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -783,7 +683,7 @@
 			<string key="settings_sharing_item_bg@2x.png">{620, 130}</string>
 			<string key="settings_sharing_twitter_off">{16, 16}</string>
 			<string key="sharing_header">{16, 16}</string>
-			<string key="shelf_background.png">{320, 240}</string>
+			<string key="shelf_background.png">{320, 365}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
